EmpathyChat: Fix pending messages not being displayed

We don't have to wait for backlog to be inserted before adding
pending messages anymore since backlog are prepended in the view.

https://bugzilla.gnome.org/show_bug.cgi?id=662672